# pymport

./: .gitignore  environment.yaml  pyproject.toml  readme.md
documentation/: README.ru.md
pylibscheme/: __init__.py  converters.py  parser.py  tools.py
pymport/: __init__.py  _converters.py  converters.py  files.py  graph_tools.py  parser.py  tools.py
